objects/Affiliation__c.object
<CustomObject>
    <description>&lt;AFF&gt; - Provide account to account relationship</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliations (Account)</relationshipLabel>
        <relationshipName>Affiliations2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Affiliations</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimaryAffiliationAccount__c</fullName>
        <label>Primary Affiliation (Account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliations</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TechDMImportDateTime__c</fullName>
        <label>Tech_DMImportDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechDMOriginalSourceSystem__c</fullName>
        <label>Tech_DMOriginalSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMReleaseNo__c</fullName>
        <label>Tech_DMReleaseNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceID__c</fullName>
        <label>Tech_DMSourceID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceSystem__c</fullName>
        <label>Tech_DMSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMXREFId__c</fullName>
        <label>Tech_DMXREF_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solicitor</fullName>
                </value>
                <value>
                    <fullName>Franchisee</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Leasing Agent</fullName>
                </value>
                <value>
                    <fullName>Leases Sent To</fullName>
                </value>
                <value>
                    <fullName>Company with Personal Guarantees</fullName>
                </value>
                <value>
                    <fullName>Company with Parent Guarantees</fullName>
                </value>
                <value>
                    <fullName>Personal Guarantees by Franchisee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>AFF-{0000}</displayFormat>
        <label>Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>